sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: not found: value by
		for(i<-getNombreValeurs()-2 to by-1){
                                               ^